--- a/notebook/pycht.ipynb
+++ b/notebook/pycht.ipynb
@@ -7,17 +7,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "\n",
+    "sys.path.append(\"..\")\n",
+    "\n",
     "from pycht import Pycht"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "3829209b-33d0-4ca9-8ea2-25238a54955f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Pycht().stencil('../misc/cat.jpg', 'stencil_cat.jpg', 4)"
+    "Pycht().stencil('../misc/cat.jpg', 4)"
    ]
   },
   {
@@ -45,7 +49,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
