Modul pycht directly called without import from.

--- a/notebook/pycht.ipynb
+++ b/notebook/pycht.ipynb
@@ -9,19 +9,27 @@
    "source": [
     "import sys\n",
     "\n",
-    "sys.path.append(\"..\")\n",
-    "\n",
-    "from pycht import Pycht"
+    "sys.path.append(\"..\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "05d69918",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pycht"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "3829209b-33d0-4ca9-8ea2-25238a54955f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Pycht().stencil('../misc/cat.jpg', 4)"
+    "pycht.stencil('../misc/cat.jpg', 4)"
    ]
   },
   {
